--- a/views/location.handlebars
+++ b/views/location.handlebars
@@ -3,101 +3,103 @@
     <div class="column is-mobile is-narrow">
       <div class="container">
         <div class="content">
-          <div class="box title is-light has-text-centered mb-6 mt-6"><span class="icon-text"></span><span class="icon">
-                <i class="fa-brands fa-fort-awesome mr-5 pl-3"
-                  ></i></span></span>
-            Welcome to
-            {{location.name}}</div>
+          <div class="box title is-light has-text-centered mb-1 mt-1">
+            <span class="icon-text"></span>
+            <span class="icon"><i class="fa-brands fa-fort-awesome mr-5 pl-3"></i></span>
+            Welcome to {{location.name}}
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="columns is-centered">
-    <div class="column is-5">
-      <div class="container">
-        <div class="content">
-          <div class="box is-light has-text-centered">
-           <header class="title is-3">Merchant: {{merchantInfo.name}}</header>
-          </div>
-        </div>
+
+  <div class="columns is-variable is-1-tablet is-8-desktop">
+    <div class="column has-text-center">
+      <div class="box">
+        <header class="title is-3">Merchant: {{merchantInfo.name}}</header>
       </div>
-      {{! a card for each item will appear with a button to buy }}
-      <div class="columns is-flex-wrap-wrap has-text-centered is-mobile">
-        {{#each merchantInfo.items as |merchantItem|}}
-          <div
-            class="column is-one-third-mobile is-half-tablet is-half-desktop is-one-third-widescreen is-one-third-fullhd"
-          >
-            <div class="container">
-              <div class="card mt-4" data-id="{{merchantItem.id}}">
-                <div class="card-content">
-                  <div class="content">
-                    <h2 class="subtitle">{{merchantItem.name}}</h2>
-                    <h3 class="subtitle">{{merchantItem.price}} <span class="icon-text"></span><span class="icon has-text-warning">
-                <i class="fa-solid fa-coins ml-5"
-                  ></i></span></span></h3>
-                    <div class="card-body">
-                      <img src="/images/" alt="" />
-                      <button
-                        class="button has-background-danger-dark has-text-white is-outlined buy-item"
-                        item-id="{{merchantItem.id}}"
-                        item-price="{{merchantItem.price}}"
-                      >Buy</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        {{/each}}
+      <div class="box">
+        <table class="table is-hoverable is-fullwidth has-text-centered">
+          <thead>
+            <tr>
+              <th class="has-text-left">Item name</th>
+              <th class="has-text-centered">Available</th>
+              <th class="has-text-centered">Price</th>
+              <th class="has-text-centered">Edible</th>
+              <th class="has-text-centered"></th>
+            </tr>
+          </thead>
+          <tbody class="is-size-5">
+            {{#each merchantInfo.items as |merchantItem|}}
+            <tr>
+              <td class="has-text-left">{{merchantItem.name}}</td>
+              <td>{{merchantItem.quantity}}</td>
+              <td>{{merchantItem.price}} <span class="icon-text"></span><span class="icon has-text-warning"><i class="fa-solid fa-coins ml-5"></i></span></td>
+              <td>{{#if merchantItem.edible}}<span class="icon-text"></span><span class="icon has-text-danger"><i class="fa-solid fa-drumstick-bite"></i></span>{{/if}}</td>
+              <td class="has-text-right">
+                <button
+                  class="button has-background-danger-dark has-text-white is-outlined buy-item"
+                  item-id="{{merchantItem.id}}"
+                  item-price="{{merchantItem.price}}">
+                  Buy
+                </button>
+              </td>
+            </tr>
+            {{/each}}
+          </tbody>
+        </table>
       </div>
     </div>
-    <div class="column is-5 is-offset-1">
+
+    <div class="column has-text-right">
+      <div class="box">
+          <header class="title is-3"><span class="icon-text"></span><span class="icon has-text-warning">
+          <i class="fa-solid fa-coins mr-5"></i></span></span>You have {{playerInfo.coins}} coins</header>
+      </div>
+      <div class="box">
+        <table class="table is-hoverable is-fullwidth has-text-centered">
+          <thead>
+            <tr>
+              <th></th>
+              <th class="has-text-centered">Edible</th>
+              <th class="has-text-centered">Price</th>
+              <th class="has-text-centered">Available</th>
+              <th class="has-text-right">Item name</th>
+            </tr>
+          </thead>
+          <tbody class="is-size-5">
+            {{#each playerInfo.items as |playerItem|}}
+            <tr>
+              <td class="has-text-left">
+                <button
+                  class="button has-background-danger-dark has-text-white is-outlined sell-item"
+                  item-id="{{playerItem.id}}"
+                  item-price="{{playerItem.price}}">
+                  Sell
+                </button>
+              </td>
+              <td>{{#if playerItem.edible}}<span class="icon-text"></span><span class="icon has-text-danger"><i class="fa-solid fa-drumstick-bite"></i></span>{{/if}}</td>
+              <td>{{playerItem.price}}<span class="icon-text"></span><span class="icon has-text-warning"><i class="fa-solid fa-coins ml-5"></i></span></td>
+              <td>{{playerItem.quantity}}</td>
+              <td class="has-text-right">{{playerItem.name}}</td>
+            </tr>
+            {{/each}}
+            </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+  <div class="columns is-centered">
+    <div class="column is-mobile is-narrow">
       <div class="container">
         <div class="content">
-          <div class="box is-light has-text-centered">
-            <header class="title is-3"><span class="icon-text"></span><span class="icon has-text-warning">
-                <i class="fa-solid fa-coins mr-5"
-                  ></i></span></span>
-                You have
-              {{playerInfo.coins}}
-              coins</header>
-          </div>
+          <button class="box button has-background-dark has-text-white has-text-centered is-medium world-map">
+            Return to world map
+          </button>
         </div>
-      </div>
-      <div
-        class="columns is-three-quarters-mobile is-two-thirds-tablet is-half-desktop is-one-third-widescreen is-one-quarter-fullhd is-flex-wrap-wrap is-mobile has-text-centered"
-      >
-        {{! a card for each item will appear with a button to sell }}
-        {{#each playerInfo.items as |playerItem|}}
-          <div class="column is-mobile is-one-third-mobile is-half-tablet is-half-desktop is-one-third-widescreen is-one-third-fullhd">
-            <div class="container">
-              <div class="card mt-4" data-id="{{playerItem.id}}">
-                <div class="card-content">
-                  <div class="content">
-                    <h2 class="subtitle">{{playerItem.name}}</h2>
-                    <h3 class="subtitle">{{playerItem.price}} <span class="icon-text"></span><span class="icon has-text-warning">
-                <i class="fa-solid fa-coins ml-5"
-                  ></i></span></span></h3>
-                    <div class="card-body">
-                      <button
-                        class="button has-background-danger-dark has-text-white is-outlined sell-item"
-                        item-id="{{playerItem.id}}"
-                        item-price="{{playerItem.price}}"
-                      >Sell</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        {{/each}}
       </div>
     </div>
   </div>
 </section>
-<footer class="has-text-centered">
-  <button
-    class="button is-rounded is-medium has-background-grey-dark has-text-white is-outlined world-map mb-6 mt-6"
-  >Go back to Map</button>
-</footer>
 <script type="module" src="/js/location.mjs"></script>
