Added styling to world map

--- a/views/worldMap.handlebars
+++ b/views/worldMap.handlebars
@@ -1,35 +1,206 @@
 {{! have map on background image }}
 {{! this is a bulma grid to try and have buttons of city that will look like they are randomly on the map }}
-<section class="section">
-  <div class="container is-flex is-justify-content-center mt-4">
-    <button
-      class="button is-rounded is-medium has-background-danger-dark has-text-white is-outlined cities"
-      data-id="{{locations.0.id}}"
-    >{{locations.0.name}}</button>
-  </div>
-  <div class="container is-flex is-justify-content-flex-start mt-6">
-    <button
-      class="button is-rounded is-medium has-background-danger-dark has-text-white is-outlined cities"
-      data-id="{{locations.1.id}}"
-    >{{locations.1.name}}</button>
-  </div>
-  <div class="container is-flex is-justify-content-flex-end m-6">
-    <button
-      class="button is-rounded is-medium has-background-danger-dark has-text-white is-outlined cities"
-      data-id="{{locations.2.id}}"
-    >{{locations.2.name}}</button>
-  </div>
-  <div class="container is-flex is-justify-content-center m-6">
-    <button
-      class="button is-rounded is-medium has-background-danger-dark has-text-white is-outlined cities"
-      data-id="{{locations.3.id}}"
-    >{{locations.3.name}}</button>
-  </div>
-  <div class="container is-flex is-justify-content-left m-6">
-    <button
-      class="button is-rounded is-medium has-background-danger-dark has-text-white is-outlined cities"
-      data-id="{{locations.4.id}}"
-    >{{locations.4.name}}</button>
+<section>
+  <div class="columns is-mobile ml-1 mr-1 mt-1">
+    <div class="column is-one-eigth-mobile is-one-eigth-tablet is-one-eigth-desktop">
+      <div class="container">
+        <div class="content">
+          <div class="box has-background-dark has-text-white has-text-centered is-medium is-size-4 p-3">
+            Coins: {{playerInfo.coins}}
+            <span class="icon-text"></span><span class="icon has-text-warning"><i class="fa-solid fa-coins ml-3"></i></span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="column is-one-eigth-mobile is-one-eigth-tablet is-one-eigth-desktop">
+      <div class="container">
+        <div class="content">
+          <div class="box has-background-dark has-text-white has-text-centered is-medium is-size-4 p-3">
+            Food: {{playerInfo.foodCount}}
+            <span class="icon-text"></span><span class="icon has-text-danger"><i class="fa-solid fa-drumstick-bite ml-3"></i></span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="column is-one-eigth-mobile is-one-quarter-tablet is-half-desktop"></div>
+    <div class="column is-one-eigth-mobile is-one-eigth-tablet is-one-eigth-desktop">
+      <div class="container">
+        <div class="content">
+          <div class="box has-background-dark has-text-white has-text-centered is-medium is-size-4 p-3">
+            <span class="icon-text"></span><span class="icon has-text-white"><i class="fa-solid fa-book"></i></span>
+            How to play
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="column is-one-eigth-mobile is-one-eigth-tablet is-one-eigth-desktop">
+      <div class="container">
+        <div class="content">
+          <div class="box has-background-dark has-text-white has-text-centered is-medium is-size-4 p-3">
+            <span class="icon-text"></span><span class="icon has-text-white"><i class="fa-solid fa-chart-simple"></i></span>
+            Score graph
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
+
+<section class="section">
+  <div class="container is-flex location0">
+    {{#if locationInfo.0.isPlayerHere}}<div class="card"><span class="icon-text"></span><span class="icon is-large has-text-danger-dark"><i class="fa-solid fa-2x fa-horse"></i></span></div>{{/if}}
+    <div class="dropdown is-hoverable is-centered">
+      <div class="dropdown-trigger">
+        <button class="button is-medium has-background-danger-dark has-text-white location" aria-haspopup="true" aria-controls="dropdown-menu4" 
+          data-id="{{locationInfo.0.id}}" days-to-reach="{{locationInfo.0.daysToReach}}">
+          {{locationInfo.0.name}}
+        </button>
+      </div>
+      <div class="dropdown-menu" id="dropdown-menu4" role="menu">
+        <div class="dropdown-content">
+          <div class="dropdown-item">
+            <p>Travelling here</p>
+            <p>will take:</p>
+            <p><strong>{{locationInfo.0.daysToReach}}</strong> days</p>
+            <p><strong>{{locationInfo.0.wages}}</strong> coins in wages</p>
+            <p><strong>{{locationInfo.0.food}}</strong> units of food.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container is-flex location1">
+    {{#if locationInfo.1.isPlayerHere}}<div class="card"><span class="icon-text"></span><span class="icon is-large has-text-danger-dark"><i class="fa-solid fa-2x fa-horse"></i></span></div>{{/if}}
+    <div class="dropdown is-hoverable is-centered">
+      <div class="dropdown-trigger">
+        <button class="button is-medium has-background-danger-dark has-text-white location" aria-haspopup="true" aria-controls="dropdown-menu4" 
+          data-id="{{locationInfo.1.id}}" days-to-reach="{{locationInfo.1.daysToReach}}">
+          {{locationInfo.1.name}}
+        </button>
+      </div>
+      <div class="dropdown-menu" id="dropdown-menu4" role="menu">
+        <div class="dropdown-content">
+          <div class="dropdown-item">
+            <p>Travelling here</p>
+            <p>will take:</p>
+            <p><strong>{{locationInfo.1.daysToReach}}</strong> days</p>
+            <p><strong>{{locationInfo.1.wages}}</strong> coins in wages</p>
+            <p><strong>{{locationInfo.1.food}}</strong> units of food.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container is-flex location2">
+    {{#if locationInfo.2.isPlayerHere}}<div class="card"><span class="icon-text"></span><span class="icon is-large has-text-danger-dark"><i class="fa-solid fa-2x fa-horse"></i></span></div>{{/if}}
+    <div class="dropdown is-hoverable is-centered">
+      <div class="dropdown-trigger">
+        <button class="button is-medium has-background-danger-dark has-text-white location" aria-haspopup="true" aria-controls="dropdown-menu4" 
+          data-id="{{locationInfo.2.id}}" days-to-reach="{{locationInfo.2.daysToReach}}">
+          {{locationInfo.2.name}}
+        </button>
+      </div>
+      <div class="dropdown-menu" id="dropdown-menu4" role="menu">
+        <div class="dropdown-content">
+          <div class="dropdown-item">
+            <p>Travelling here</p>
+            <p>will take:</p>
+            <p><strong>{{locationInfo.2.daysToReach}}</strong> days</p>
+            <p><strong>{{locationInfo.2.wages}}</strong> coins in wages</p>
+            <p><strong>{{locationInfo.2.food}}</strong> units of food.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container is-flex location3">
+    {{#if locationInfo.3.isPlayerHere}}<div class="card"><span class="icon-text"></span><span class="icon is-large has-text-danger-dark"><i class="fa-solid fa-2x fa-horse"></i></span></div>{{/if}}
+    <div class="dropdown is-hoverable is-centered">
+      <div class="dropdown-trigger">
+        <button class="button is-medium has-background-danger-dark has-text-white location" aria-haspopup="true" aria-controls="dropdown-menu4" 
+          data-id="{{locationInfo.3.id}}" days-to-reach="{{locationInfo.3.daysToReach}}">
+          {{locationInfo.3.name}}
+        </button>
+      </div>
+      <div class="dropdown-menu" id="dropdown-menu4" role="menu">
+        <div class="dropdown-content">
+          <div class="dropdown-item">
+            <p>Travelling here</p>
+            <p>will take:</p>
+            <p><strong>{{locationInfo.3.daysToReach}}</strong> days</p>
+            <p><strong>{{locationInfo.3.wages}}</strong> coins in wages</p>
+            <p><strong>{{locationInfo.3.food}}</strong> units of food.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container is-flex location4">
+    {{#if locationInfo.4.isPlayerHere}}<div class="card"><span class="icon-text"></span><span class="icon is-large has-text-danger-dark"><i class="fa-solid fa-2x fa-horse"></i></span></div>{{/if}}
+    <div class="dropdown is-hoverable is-centered">
+      <div class="dropdown-trigger">
+        <button class="button is-medium has-background-danger-dark has-text-white location" aria-haspopup="true" aria-controls="dropdown-menu4" 
+          data-id="{{locationInfo.4.id}}" days-to-reach="{{locationInfo.4.daysToReach}}">
+          {{locationInfo.4.name}}
+        </button>
+      </div>
+      <div class="dropdown-menu" id="dropdown-menu4" role="menu">
+        <div class="dropdown-content">
+          <div class="dropdown-item">
+            <p>Travelling here</p>
+            <p>will take:</p>
+            <p><strong>{{locationInfo.4.daysToReach}}</strong> days</p>
+            <p><strong>{{locationInfo.4.wages}}</strong> coins in wages</p>
+            <p><strong>{{locationInfo.4.food}}</strong> units of food.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  {{!-- <div class="columns is-left bottom-of-screen">
+    <div class="column is-mobile is-narrow">
+      <div class="container">
+        <div class="content">
+          <div class="box has-background-dark has-text-white has-text-left is-medium is-size-5">
+            Coins: {{playerInfo.coins}}
+            <span class="icon-text"></span><span class="icon has-text-warning"><i class="fa-solid fa-coins ml-3"></i></span>
+          </div>
+          </div>
+        </div>
+      </div>
+    <div class="column is-mobile is-narrow">
+      <div class="container">
+        <div class="content">
+          <div class="box has-background-dark has-text-white has-text-left is-medium is-size-5">
+            Food: {{playerInfo.foodCount}}
+            <span class="icon-text"></span><span class="icon has-text-danger"><i class="fa-solid fa-drumstick-bite ml-3"></i></span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="columns is-centered bottom-of-screen">
+    <div class="column is-mobile is-narrow">
+      <div class="container">
+        <div class="content">
+          <button class="button has-background-dark has-text-white has-text-right is-medium is-size-5" id="rule-button">
+            <span class="icon-text"></span><span class="icon has-text-white"><i class="fa-solid fa-book mr-3"></i></span>
+            Rules
+          </button>
+          </div>
+        </div>
+      </div>
+    <div class="column is-mobile is-narrow">
+      <div class="container">
+        <div class="content">
+          <button class="button has-background-dark has-text-white has-text-right is-medium is-size-5" id="score-button">
+            <span class="icon-text"></span><span class="icon has-text-white"><i class="fa-solid fa-chart-simple mr-3"></i></span>
+            Score Graph
+          </button>
+        </div>
+      </div>
+    </div>
+  </div> --}}
+</section>
+
 <script type="module" src="/js/worldMap.mjs"></script>
