--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,18 +6,6 @@
     <title>Merchant Game</title>
     <script src="https://kit.fontawesome.com/a5df7e3382.js" crossorigin="anonymous"></script>
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
-    />
-    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
     />
@@ -29,8 +17,7 @@
       rel="stylesheet"
       href="cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="/css/style2.css" />
-    {{!-- <link rel="stylesheet" href="./css/style.css" /> --}}
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <!-- this is the navbar element -->
