--- a/views/location.handlebars
+++ b/views/location.handlebars
@@ -24,7 +24,7 @@
             <tr>
               <th class="has-text-left">Item name</th>
               <th class="has-text-centered">Available</th>
-              <th class="has-text-centered">Price</th>
+              <th class="has-text-centered">Price (per item)</th>
               <th class="has-text-centered">Edible</th>
               <th class="has-text-centered"></th>
             </tr>
@@ -36,6 +36,7 @@
               <td>{{merchantItem.quantity}}</td>
               <td>{{merchantItem.price}} <span class="icon-text"></span><span class="icon has-text-warning"><i class="fa-solid fa-coins ml-5"></i></span></td>
               <td>{{#if merchantItem.edible}}<span class="icon-text"></span><span class="icon has-text-danger"><i class="fa-solid fa-drumstick-bite"></i></span>{{/if}}</td>
+              {{#if (greaterThanOrEqual merchantItem.playerCoins merchantItem.price)}}
               <td class="has-text-right">
                 <button
                   class="button has-background-danger-dark has-text-white is-outlined buy-item"
@@ -44,6 +45,16 @@
                   Buy
                 </button>
               </td>
+              {{else}}
+              <td class="has-text-right">
+                <button
+                  class="button has-background-danger-dark has-text-white is-outlined"
+                  item-id="{{merchantItem.id}}"
+                  item-price="{{merchantItem.price}}" disabled>
+                  Buy
+                </button>
+              </td>
+              {{/if}}
             </tr>
             {{/each}}
           </tbody>
@@ -62,7 +73,7 @@
             <tr>
               <th></th>
               <th class="has-text-centered">Edible</th>
-              <th class="has-text-centered">Price</th>
+              <th class="has-text-centered">Price (per item)</th>
               <th class="has-text-centered">Available</th>
               <th class="has-text-right">Item name</th>
             </tr>
@@ -85,6 +96,89 @@
             </tr>
             {{/each}}
             </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+  <div class="columns is-variable is-1-tablet is-8-desktop">
+    <div class="column has-text-centered">
+      <div class="box">
+        <table class="table is-hoverable is-fullwidth has-text-centered">
+          <thead>
+            <tr>
+              <th class="has-text-left">Type</th>
+              <th class="has-text-centered">Carrying capacity</th>
+              <th class="has-text-centered">Cost</th>
+              <th class="has-text-centered">Wage per day</th>
+              <th class="has-text-centered">Food per day</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody class="is-size-5">
+            <tr>
+              <td class="has-text-left">Worker</td>
+              <td>100</td>
+              <td>30<span class="icon-text"></span><span class="icon has-text-warning"><i class="fa-solid fa-coins ml-5"></i></span></td>
+              <td>3<span class="icon-text"></span><span class="icon has-text-warning"><i class="fa-solid fa-coins ml-5"></i></span></td>
+              <td>1<span class="icon-text"></span><span class="icon has-text-danger"><i class="fa-solid fa-drumstick-bite ml-5"></i></span></td>
+              {{#if (greaterThanOrEqual playerInfo.coins 30)}}
+              <td class="has-text-right"><button class="button has-background-danger-dark has-text-white is-outlined" id="hire-worker">Hire</button></td>
+              {{else}}
+              <td class="has-text-right"><button class="button has-background-danger-dark has-text-white is-outlined" disabled>Hire</button></td>
+              {{/if}}
+            </tr>
+
+            <tr>
+              <td class="has-text-left">Horse</td>
+              <td>250</td>
+              <td>80<span class="icon-text"></span><span class="icon has-text-warning"><i class="fa-solid fa-coins ml-5"></i></span></td>
+              <td>N/A</td>
+              <td>1<span class="icon-text"></span><span class="icon has-text-danger"><i class="fa-solid fa-drumstick-bite ml-5"></i></span></td>
+              {{#if (greaterThanOrEqual playerInfo.coins 80)}}
+              <td class="has-text-right"><button class="button has-background-danger-dark has-text-white is-outlined" id="buy-horse">Buy</button></td>
+              {{else}}
+              <td class="has-text-right"><button class="button has-background-danger-dark has-text-white is-outlined" disabled>Buy</button></td>
+              {{/if}}
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+    <div class="column has-text-centered">
+      <div class="box">
+        <table class="table is-hoverable is-fullwidth has-text-centered">
+          <thead>
+            <tr>
+              <th></th>
+              <th class="has-text-centered">Sale price</th>
+              <th class="has-text-centered">You have</th>
+              <th class="has-text-right">Type</th>
+            </tr>
+          </thead>
+          <tbody class="is-size-5">
+            <tr>
+              {{#if (greaterThan playerInfo.workers 0)}}
+              <td class="has-text-left"><button class="button has-background-danger-dark has-text-white is-outlined" id="dismiss-worker">Dismiss</button></td>
+              {{else}}
+              <td class="has-text-left"><button class="button has-background-danger-dark has-text-white is-outlined" disabled>Dismiss</button></td>
+              {{/if}}
+              <td>N/A</td>
+              <td>{{playerInfo.workers}}</td>
+              <td class="has-text-right">Worker</td>
+            </tr>
+            <tr>
+              {{#if (greaterThan playerInfo.horses 0)}}
+              <td class="has-text-left"><button class="button has-background-danger-dark has-text-white is-outlined" id="sell-horse">Sell</button></td>
+              {{else}}
+              <td class="has-text-left"><button class="button has-background-danger-dark has-text-white is-outlined" disabled>Sell</button></td>
+              {{/if}}
+              <td>60<span class="icon-text"></span><span class="icon has-text-warning"><i class="fa-solid fa-coins ml-5"></i></span></td>
+              <td>{{playerInfo.horses}}</td>
+              <td class="has-text-right">Horse</td>
+            </tr>
+          </tbody>
         </table>
       </div>
     </div>
