--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -47,10 +47,77 @@
           {{!-- if the user is logged in they will see the logout and homepage button --}}
           {{#if loggedIn}}
           <div class="navbar-item">
-            {{#unless onHomePage}}
+            {{#if displayScoreButton}}
+            <button class="button navbar-item has-text-white has-background-dark is-size-5 mr-2 js-modal-trigger" data-target="view-score-modal" id="view-score">View Score</button>
+            {{/if}}
+            <button class="button navbar-item has-text-white has-background-dark is-size-5 mr-2 js-modal-trigger" data-target="how-to-play-modal" id="how-to-play">How To Play</button>
+            {{#if displayHomePageButton}}
             <button class="button navbar-item has-text-white has-background-dark is-inverted is-size-5 mr-2" id="homepage">Homepage</button>
-            {{/unless}}
+            {{/if}}
             <button class="button navbar-item has-text-white has-background-dark is-size-5" id="logout">Logout</button>
+          </div>
+
+          <!-- How to play modal -->
+          <div id="how-to-play-modal" class="modal">
+            <div class="modal-background"></div>
+              <div class="modal-card">
+                <header class="modal-card-head">
+                  <p class="modal-card-title has-text-centered">How To Play</p>
+                  <button class="delete" id="how-to-play-modal-close" aria-label="close"></button>
+                </header>
+                <section class="modal-card-body has-text-black">
+                  <div class="has-text-weight-bold is-size-5">
+                    <span class="icon-text"></span><span class="icon has-text-warning"><i class="fa-solid fa-coins"></i></span>
+                    Coins:
+                  </div>
+                  <div>
+                    The goal of the game is to make as much money as you can by buying and selling items. Each location has certain items that it produces, if a location produces items then they can be bought 
+                    there for below average prices, while the reverse is true for items that aren't produced. Try to find locations that will buy particular items for high prices and other locations that will 
+                    sell them for low prices to maximise you profits.
+                  </div>
+                  <br>
+                  <div class="has-text-weight-bold is-size-5">
+                    <span class="icon-text"></span><span class="icon has-text-danger"><i class="fa-solid fa-drumstick-bite"></i></span>
+                    Food:
+                  </div>
+                  <div>
+                    Some items can be eaten, make sure you have enough food to feed everyone (as explained in the Workers and Horses section below) or you'll lose the game.
+                  </div>
+                  <br>
+                  <div class="has-text-weight-bold is-size-5">
+                    <span class="icon-text"></span><span class="icon has-text-danger-dark"><i class="fa-solid fa-horse"></i></span>
+                    Workers and Horses:
+                  </div>
+                  <div>
+                    Each worker and horse will increase the amount that you can carry. However both need to eat one unit of food a day, and workers also need to be paid a daily wage. You can purchase/hire 
+                    additional workers and horses at any location.
+                  </div>
+                </section>
+                  <footer class="modal-card-foot">
+                </footer>
+              </div>
+            </div>
+          </div>
+
+          <!-- Score graph modal -->
+          <div id="view-score-modal" class="modal">
+            <div class="modal-background"></div>
+              <div class="modal-card">
+                <header class="modal-card-head">
+                  <p class="modal-card-title has-text-centered">Score</p>
+                  <button class="delete" id="view-score-close" aria-label="close"></button>
+                </header>
+                <section class="modal-card-body has-text-black">
+                  <div>
+                    <canvas id="progress-chart">
+
+                    </canvas>
+                  </div>
+                </section>
+                  <footer class="modal-card-foot">
+                </footer>
+              </div>
+            </div>
           </div>
           {{/if}}
         </div>
@@ -59,9 +126,9 @@
     {{{body}}}
     <!-- Render script for logged in users only -->
     {{#if loggedIn}}
-      <script src="/js/logout.js"></script>
       {{!-- this script will triger the burger menu on smaller screen and the homepage button on navbar --}}
-      <script src="../js/homePage.js"></script>
+      <script src="/js/navBar.js"></script>
+      <script type="module" src="/js/viewScore.mjs"></script>
     {{/if}}
   </body>
 </html>
