--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
 	padding: 0;
-	font-family: 'Poppins', sans-serif;
+	font-family:Georgia, 'Times New Roman', Times, serif;
 }
 body:before {
 	content: '';
@@ -29,6 +29,11 @@ body:before {
 	background: rgba(0, 0, 0, 0.5);
 }
 
+.input {
+	font-family: serif;
+	color: bisque;
+	font-size: 20px;
+}
 
 .card h2 {
 	margin: 0;
@@ -38,18 +43,14 @@ body:before {
 	text-transform: uppercase;
 }
 
-
 .card p {
 	margin: 0;
 	padding: 0;
 	font-weight: bold;
 	color:burlywood;
-	font-size: 16px;
+	font-size: 20px;
 }
-.card input {
-	width: 100%;
-	margin-bottom: 20px;
-}
+
 .card [type=email],[type=password],[type=text],[type=date] {
 	border: none;
 	border-bottom: 1px solid burlywood;
@@ -62,23 +63,24 @@ body:before {
 }
 .card-input[type=submit][type=submit] {
 	height: 40px;
-	color: rgb(108, 75, 75);
 	font-size: 20px;
-	background:grey;
 	cursor: pointer;
 	border-radius: 25px;
 	border: none;
 	outline: none;
 	margin-top: 20%;
+	width: 100%;
+	margin-bottom: 20px;
 }
 .card-a {
 	color:antiquewhite;
-	font-size: 14px;
+	font-size: 20px;
 	font-weight: bold;
-	text-decoration: none;
+	
 }
 input[type=checkbox] {
 	width: 20%;
+	font-size: 20px;
 }
 .card {
 	background: transparent;
@@ -91,18 +93,15 @@ input[type=checkbox] {
 
 .button{
 	border:blanchedalmond;
-	
+	font-family: serif;
+	font-size: 20px;
+
 }
-
-
 
 .card label{
-	font-size: 16px;
+	font-size: 20px;
 	color:blanchedalmond;
-
 }
-
-
 
 .card-member {
 	position: absolute;
@@ -116,33 +115,16 @@ input[type=checkbox] {
 
 }
 
-
-.navbar is-transparent{
-	content: '';
-	position: fixed;
-	width: 100vw;
-	height: 100vh;
-	background-image: url("./images/image.png");
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	-webkit-background-size: cover;
-	background-size: cover;
-	-webkit-filter: blur(10px);
-	-moz-filter: blur(5px);
-	filter: blur(6px);
-}
-
-/*.container{
+.box{
 	position: absolute;
-	top: 40%;
-	left: 50%;
-	margin-top: 40px;
+	margin-top: 30px;
+	width: 450px;
+	color: antiquewhite;
+	font-family: Georgia, 'Times New Roman', Times, serif;
+	position: absolute;
+	border-style:inherit;
+	border:solid black;
 	transform: translate(-50%, -50%);
-	width: 100%;
-	height: 50%;
-	padding: 50px 40px;
 	background: rgba(0, 0, 0, 0.5);
-	
-	
 }
+
