Just having a real fun time getting deployment to work

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -26,11 +26,9 @@
                   >Login</button>
                 </div>
               </div>
-              <div class="container mt-5"> </div>
+              <div class="container mt-5">
                 <p>No account?</p>
-                <button
-                class="button has-background-dark has-text-white signUp-page-btn"
-                type="submit">Sign up</button>
+                <button class="button has-background-dark has-text-white" id="signUp-page-btn" type="submit">Sign up</button>
               </div>
             </div>
           </div>
