--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,7 +1,6 @@
 <section class="section">
   <div class="columns is-mobile is-centered">
-    <div
-      class="column is-three-quarters-mobile is-two-thirds-tablet is-half-desktop is-one-third-widescreen is-one-quarter-fullhd">
+    <div class="column is-three-quarters-mobile is-two-thirds-tablet is-half-desktop is-one-third-widescreen is-one-quarter-fullhd">
       <div class="container is-vcentered">
         {{! card element contains form for signUp }}
         <div class="card mt-6">
@@ -26,11 +25,12 @@
             </div>
             <div class="field is-grouped">
               <div class="control">
-                <button
-                  class="button has-background-dark has-text-white"
-                  id="signup-form-btn"
-                  type="submit"
-                >Sign Up</button>
+                <button class="button has-background-dark has-text-white" id="signup-form-btn" type="submit">Sign Up</button>
+              </div>
+            </div>
+            <div class="field is-grouped">
+              <div class="control">
+                <button class="button has-background-dark has-text-white" id="back-btn" type="submit">Back</button>
               </div>
             </div>
           </div>
