Removed extraneous files

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -7,28 +7,28 @@
           <div class="card-content">
             <div class="field">
               <label class="label">Name</label>
-              <div class="control has-icons-left has-icons-right">
+              <div class="control">
                 <input class="input" type="text" id="name-signup" />
               </div>
             </div>
             <div class="field">
               <label class="label">Email</label>
-              <div class="control has-icons-left has-icons-right">
+              <div class="control">
                 <input class="input" type="text" id="email-signup" />
               </div>
             </div>
             <div class="field">
               <label class="label">Password</label>
-              <div class="control has-icons-left has-icons-right">
+              <div class="control">
                 <input class="input" type="password" id="password-signup" />
               </div>
             </div>
-            <div class="field is-grouped">
+            <div class="field">
               <div class="control">
                 <button class="button has-background-dark has-text-white" id="signup-form-btn" type="submit">Sign Up</button>
               </div>
             </div>
-            <div class="field is-grouped">
+            <div class="field">
               <div class="control">
                 <button class="button has-background-dark has-text-white" id="back-btn" type="submit">Back</button>
               </div>
