--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,27 +8,26 @@
             <div class="content">
               <div class="field">
                 <label class="label">Email</label>
-                <div class="control has-icons-left has-icons-right">
+                <div class="control">
                   <input class="input" type="text" id="email-login" />
                 </div>
               </div>
               <div class="field">
                 <label class="label">Password</label>
-                <div class="control has-icons-left has-icons-right">
+                <div class="control">
                   <input class="input" type="password" id="password-login" />
                 </div>
               </div>
-              <div class="field is-grouped">
+              <div class="field">
                 <div class="control">
-                  <button
-                    class="button is-link has-background-dark has-text-white"
-                    id="login-btn"
-                  >Login</button>
+                  <button class="button is-link has-background-dark has-text-white" id="login-btn">Login</button>
                 </div>
               </div>
-              <div class="container mt-5">
-                <p>No account?</p>
-                <button class="button has-background-dark has-text-white" id="signUp-page-btn" type="submit">Sign up</button>
+              <div class="field">
+                <label class="label">No account?</label>
+                <div class="control">
+                  <button class="button has-background-dark has-text-white" id="signUp-page-btn" type="submit">Sign up</button>
+                </div>
               </div>
             </div>
           </div>
