Improved modal responsiveness

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -35,5 +35,17 @@
       </div>
     </div>
   </div>
+
+  <div id="invalid-details-modal" class="modal">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+      <header class="modal-card-head">
+        <p class="modal-card-title has-text-centered">You email or password were incorrect, please try again.</p>
+      </header>
+      <footer class="modal-card-foot">
+        <button class="button" id="invalid-details-modal-close">Close</button>
+      </footer>
+    </div>
+  </div>
 </section>
 <script src="/js/login.js"></script>
