Fixed bug with howToPlayButton

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,7 +36,9 @@
           {{#if displayScoreButton}}
           <button class="button navbar-item has-text-white has-background-dark is-size-5 mr-2 js-modal-trigger" data-target="view-score-modal" id="view-score">View Score</button>
           {{/if}}
+          {{#if displayHowToPlayButton}}
           <button class="button navbar-item has-text-white has-background-dark is-size-5 mr-2 js-modal-trigger" data-target="how-to-play-modal" id="how-to-play">How To Play</button>
+          {{/if}}
           {{#if displayHomePageButton}}
           <button class="button navbar-item has-text-white has-background-dark is-inverted is-size-5 mr-2" id="homepage">Homepage</button>
           {{/if}}
