--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -40,7 +40,7 @@
     <div class="modal-background"></div>
     <div class="modal-card">
       <header class="modal-card-head">
-        <p class="modal-card-title has-text-centered">You email or password were incorrect, please try again.</p>
+        <p class="modal-card-title has-text-centered">Your email or password were incorrect, please try again.</p>
       </header>
       <footer class="modal-card-foot">
         <button class="button" id="invalid-details-modal-close">Close</button>
